fix font size, alignment and thickness of red line for on demand events

--- a/scripts/browse-card/browse-card-on-demand-events.css
+++ b/scripts/browse-card/browse-card-on-demand-events.css
@@ -35,7 +35,7 @@
   box-sizing: border-box;
   padding-left: 10%;
   padding-right: 10%;
-  letter-spacing: 0.2px;
+  letter-spacing: 1px;
 }
 
 .browse-card.event-card .browse-card-figure .event-series-banner::before,
